fixed all the spacing & colors funky font added

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,13 +1,21 @@
 .btn{
 	margin: 1%;
-	background-color: #20a39e;
+	background-color: #fe5d26;
 	font-weight: bold;
 	padding: 1%;
+	border-color: #fe5d26;
 }
+.btn:hover{
+
+	background-color: #cfcfea;
+	border-color: #cfcfea;
+}
+
 #addInterest
 {
-	background-color: #20a39e;
+	background-color: #fe5d26;
 	font-weight: bold;
+	border-color: #fe5d26;
 }
 
 .mdl-layout__header{
@@ -24,13 +32,67 @@
 }
 #chat{
 	height: 500px;
-	 padding: 0px;
+	padding: 0px;
 }
 
-/*GEOLOCATION CSS
-*/body {
+.mdl-button{
+	color: white;
+}
+h2{
+	font-family: 'Gloria Hallelujah', cursive;
+	font-weight: bold;
+}
+
+h4{
+	color: white;
+	font-family: 'Gloria Hallelujah', cursive;
+}
+
+.panel-body{
+	margin: 0px;
+}
+
+#blackColor{
+	color: black;
+}
+#headingArea{
+	background-color: #fe5d26;
+}
+
+p {
+	padding-top: 25px;
+	margin-top: 25px;
+}
+#interestInput{
+	font-family: 'Gloria Hallelujah', cursive;
+}
+
+#btnBox{
+	margin-bottom: 20px;
+}
+
+#panelBox{
+	margin-bottom: 100px;
+}
+
+/*.panel-default{
+	margin-bottom: 50px;
+}*/
+
+footer{
+	text-align: center;
+	padding: 1em;
+}
+
+a {
+	color: white;
+}
+
+
+/*GEOLOCATION CSS*/
+body {
   padding: 20px;
-  background-color:#ffffc9
+  background-color: #cfcfea;
 }
 
 p { margin : 0; }
@@ -44,6 +106,7 @@ p { margin : 0; }
 	padding: 1px;
 	top: 0px;
 	right: 2px;
+
 }
 .closeInterest:hover {
 	border: 1px solid white;
